# 07-taotie

./: Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml
assets/: juventus.csv  sample.parquet  users.ndjson
examples/: arrow-serde.rs  ndjson.rs  pq.rs  repl.rs
notebooks/: README.md  pyproject.toml  taotie.ipynb
notebooks/src/notebooks/: __init__.py
src/: lib.rs  main.rs
src/backend/: data_fusion.rs  mod.rs
src/backend/fusion/: describe.rs  df_describe.rs  mod.rs
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
